# chat_bot

./: .gitignore  pyproject.toml  requirements.txt
chat_bot/: main.py  schemas.py  setting.py
chat_bot/models/: chat.py  conversation.py  upload_model.py
chat_bot/routers/: chat.py  conversation.py  upload_file.py
chat_bot/schema/: chat_schems.py  conversation_schems.py
chat_bot/utils/: common.py
