[tool.poetry]
name = "pg-fastapi"
version = "0.1.0"
description = ""
authors = ["zubairkofficial <thezubairkhan.developer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
